tests/ui/does-not-have-iter-interpolated.stderr
error[E0277]: the trait bound `quote::__rt::logic::False: quote::__rt::HasIter` is not satisfied
 --> $DIR/does-not-have-iter-interpolated.rs:8:5
  |
8 |     quote!(#(#nonrep)*);
  |     ^^^^^^^^^^^^^^^^^^^^ the trait `quote::__rt::HasIter` is not implemented for `quote::__rt::logic::False`
  |
  = note: required by `quote::__rt::require_has_iter`
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

For more information about this error, try `rustc --explain E0277`.
